# sync

./: .gitignore  .gitmodules  meson.build  version.vala.in
Source/Common/: Asserts.vala  ComputeChecksum.vala  Constants.vala  FileSystem.vala  JenkinsHash.vala  PinState.vala  PluginFactory.vala  PreparedSqlQueryManager.vala  RemotePermissions.vala  Result.vala  SqlDatabase.vala  SyncFileStatus.vala  SyncJournalDb.vala  SyncJournalFileRecord.vala  Utility.vala  Vfs.vala  meson.build
Vala/CSync/: CSync.vala  ChangeLog  Csync.vala  CsyncExclude.vala  Exclude.vala  ExcludedFiles.vala  FileStat.vala  IndividualFileStatus.vala  Private.vala  SyncInstructions.vala  SyncStatus.vala  Time.vala  Version.vala.in  VioHandle.vala  VioLocal.vala  meson.build
Vala/CSync/Std/: CLib.vala  CPrivate.vala  CTime.vala
Vala/CSync/Vio/: CSyncVioLocal.vala
Vala/Cmd/: Cmd.vala  CommandLine.vala  EchoDisabler.vala  HttpCredentialsText.vala  NetrcParser.vala  SimpleSslErrorHandler.vala  meson.build
Vala/Common/: Asserts.vala  ComputeChecksum.vala  Config.vala  Constants.vala  FileSystem.vala  JenkinsHash.vala  PinState.vala  PreparedSqlQuery.vala  PreparedSqlQueryManager.vala  RemotePermissions.vala  SqlDatabase.vala  SqlQuery.vala  SyncFileStatus.vala  SyncJournalDb.vala  Utility.vala  Version.vala  Vfs.vala  VfsOff.vala  VfsSetupParams.vala  meson.build
Vala/Common/ComputeChecksum/: AbstractComputeChecksum.vala  CSyncChecksumHook.vala  ComputeChecksum.vala  ComputeChecksumBase.vala  ValidateChecksumHeader.vala
Vala/Common/Errors/: InvalidParameterError.vala
Vala/Common/PluginFactory/: AbstractPluginFactory.vala  DefaultPluginFactory.vala  PluginFactory.vala
Vala/Common/Result/: Optional.vala  Result.vala
Vala/Common/SyncJournalFileRecord/: ConflictRecord.vala  SyncJournalErrorBlocklistRecord.vala  SyncJournalFileRecord.vala
Vala/Common/Vfs/: AbstractVfs.vala  ItemAvailability.vala  PinState.vala  (+3 more)
Vala/CrashReporter/: Main.vala  meson.build
Vala/Gui/: AccountApp.vala  AccountManager.vala  AccountSettings.ui  AccountSettings.vala  AccountState.vala  AddCertificateDialog.vala  Application.vala  AuthenticationDialog.vala  ConflictDialog.vala  ConflictSolver.vala  ConnectionValidator.vala  ElidedLabel.vala  Emoji.vala  EmojiCategoriesModel.vala  EmojiModel.vala  FileActivityListModel.vala  Folder.vala  FolderConnection.vala  FolderCreationDialog.vala  FolderDefinition.vala  FolderMan.vala  FolderManager.vala  FolderStatusDelegate.vala  FolderStatusModel.vala  FolderStatusView.vala  FolderWatcher.vala  FolderWatcherPrivate.vala  FolderWizard.vala  FolderWizardTargetPage.ui  GeneralSettings.vala  HeaderBanner.vala  IconUtils.vala  IgnoreListEditor.vala  IgnoreListTableWidget.vala  InvalidFilenameDialog.vala  LegalNotice.vala  LockWatcher.vala  LogBrowser.vala  Main.vala  NavigationPaneHelper.vala  (+37 more)
Vala/LibSync/: AbstractPropagateRemoteDeleteEncrypted.vala  AccessManager.vala  Account.vala  AccountFwd.vala  BandwidthManager.vala  BulkPropagatorJob.vala  Capabilities.vala  ClientSideEncryption.vala  ConfigFile.vala  CookieJar.vala  DateTimeProvider.vala  DeleteJob.vala  EncryptFolderJob.vala  EtagParser.vala  FileSystem.vala  HttpError.vala  HttpLogger.vala  IconJob.vala  LocalDiscoveryTracker.vala  Logger.vala  LsColXMLParser.vala  NextcloudTheme.vala  OcsProfileConnector.vala  OcsUserStatusConnector.vala  ProcessDirectoryJob.vala  PropagateDownloadEncrypted.vala  PropagateRemoteDelete.vala  PropagateRemoteDeleteEncrypted.vala  PropagateRemoteDeleteEncryptedRootFolder.vala  PropagateRemoteMkdir.vala  PropagateRemoteMove.vala  PropagateUploadEncrypted.vala  PushNotificationManager.vala  PushNotifications.vala  PutMultiFileJob.vala  SyncEngine.vala  SyncFileItem.vala  SyncFileStatusTracker.vala  SyncOptions.vala  SyncResult.vala  (+5 more)
Vala/Testing/: StubFolderMan.vala  StubRemoteWipe.vala  SyncEngineTestUtils.vala  TestAccount.vala  TestAllFilesDeleted.vala  TestBlacklist.vala  TestBlocklist.vala  TestCapabilities.vala  TestChecksumValidator.vala  TestChunkingNg.vala  TestClientSideEncryption.vala  TestConcatUrl.vala  TestCookies.vala  TestDatabaseError.vala  TestDownload.vala  TestExcludedFiles.vala  TestFolder.vala  TestFolderMan.vala  TestFolderWatcher.vala  TestHelper.vala  TestIconUtils.vala  TestInotifyWatcher.vala  TestLocalDiscovery.vala  TestLockedFiles.vala  TestLongWindowsPath.vala  TestNetrcParser.vala  TestNextcloudPropagator.vala  TestNotificationCache.vala  TestOwnSql.vala  TestPermissions.vala  TestPlan.md  TestPushNotifications.vala  TestRemoteDiscovery.vala  TestRemoteWipe.vala  TestSelectiveSync.vala  TestSetUserStatusDialog.vala  TestSyncCfapi.vala  TestSyncConflict.vala  TestSyncDelete.vala  TestSyncEngine.vala  (+13 more)
subprojects/Cmd/: CommandLine.vala  HttpCredentialsText.vala  NetrcParser.vala  SimpleSslErrorHandler.vala  meson.build
subprojects/Common/: Asserts.vala  Constants.vala  FileSystem.vala  SqlDatabase.vala  SyncJournalDb.vala  Utility.vala  Version.vala  meson.build
subprojects/cmd/: CommandLine.vala  EchoDisabler.vala  HttpCredentialsText.vala  NetrcParser.vala  SimpleSslErrorHandler.vala  meson.build
subprojects/common/: Asserts.vala  Config.vala  Constants.vala  FileSystem.vala  JenkinsHash.vala  PreparedSqlQuery.vala  PreparedSqlQueryManager.vala  RemotePermissions.vala  SqlDatabase.vala  SqlQuery.vala  SyncFileStatus.vala  SyncJournalDb.vala  Utility.vala  Version.vala  meson.build
subprojects/crash_reporter/: Main.vala  meson.build
subprojects/csync/: ExcludedFiles.vala  FileStat.vala  ItemType.vala  Private.vala  SyncInstructions.vala  Time.vala  VioHandle.vala  meson.build
subprojects/lib_sync/: AbstractSslErrorHandler.vala  Account.vala  BandwidthManager.vala  ConfigFile.vala  EtagParser.vala  ExtraFolderInfo.vala  FileSystem.vala  HttpError.vala  HttpLogger.vala  IconJob.vala  LocalDiscoveryTracker.vala  Logger.vala  LsColXMLParser.vala  ProcessDirectoryJob.vala  PushNotificationManager.vala  SyncEngine.vala  SyncFileItem.vala  SyncFileStatusTracker.vala  SyncOptions.vala  SyncResult.vala  UploadDevice.vala  WordList.vala  meson.build
(+1892 files in other folders)
