# project(
#	'com.elsiehupp.NextcloudVala',
#	'c',
#	'vala',
#	version: '1.0.0')

srcs = files([
#    'Config.vala.cmake',
    'Exclude.vala',
    'CSync.vala',
#    'Version.vala.in',
    'Private.vala',
    'Time.vala',
    'VioLocal.vala'
])

executable(
    meson.project_name(),
    srcs,
#    dependencies: deps,
    install: false
)