# project(
#	'com.elsiehupp.NextcloudVala',
#	'c',
#	'vala',
#	version: '1.0.0')

srcs = files([
#    'Config.vala.cmake',
    'ExcludedFiles.vala',
    'FileStat.vala',
    'IndividualFileStatus.vala',
    'ItemType.vala',
#    'Version.vala.in',
    'Private.vala',
    'SyncInstructions.vala',
    'SyncStatus.vala',
    'Time.vala',
    'VioLocal.vala'
])

executable(
    meson.project_name(),
    srcs,
#    dependencies: deps,
    install: false
)