srcs = files([
    'Benchmarks/benchlargesync.vala',
    'CSync/cmdline.vala',
    'CSync/std_tests/check_std_c_jhash.vala',
    'CSync/torture.vala',
    'CSync/vio_tests/check_vio_ext.vala',
    'Manual/FavLink/main.vala',
    'Manual/FavLink/owncloudlib.vala',
    'mockserver/HttpServer.vala',
    'mockserver/main.vala',
    'PushNotificationsTestUtils.vala',
    'StubFolderMan.vala',
    'StubRemoteWipe.vala',
    'SyncEngineTestUtils.vala',
    'TestAccount.vala',
    'TestAllFilesDeleted.vala',
    'TestAsyncOp.vala',
    'TestBlacklist.vala',
    'TestCapabilities.vala',
    'TestChecksumValidator.vala',
    'TestChunkingNg.vala',
    'TestClientSideEncryption.vala',
    'TestConcatUrl.vala',
    'TestCookies.vala',
    'TestDatabaseError.vala',
    'TestDownload.vala',
    'TestExcludedFiles.vala',
    'TestFolderMan.vala',
    'TestFolder.vala',
    'TestFolderWatcher.vala',
    'TestHelper.vala',
    'TestIconUtils.vala',
    'TestInotifyWatcher.vala',
    'TestLocalDiscovery.vala',
    'TestLockedFiles.vala',
    'TestLongWindowsPath.vala',
    'TestNetrcParser.vala',
    'TestNextcloudPropagator.vala',
    'TestNotificationCache.vala',
    'TestOAuth.vala',
    'TestOwnSql.vala',
    'TestPermissions.vala',
    'TestPushNotifications.vala',
    'TestRemoteDiscovery.vala',
    'TestRemoteWipe.vala',
    'TestSelectiveSync.vala',
    'TestSetUserStatusDialog.vala',
    'TestSyncCfapi.vala',
    'TestSyncConflict.vala',
    'TestSyncDelete.vala',
    'TestSyncEngine.vala',
    'TestSyncFileItem.vala',
    'TestSyncFileStatusTracker.vala',
    'TestSyncJournalDB.vala',
    'TestSyncMove.vala',
    'TestSyncVirtualFiles.vala',
    'TestSyncXattr.vala',
    'TestTheme.vala',
    'TestUnifiedSearchListModel.vala',
    'TestUpdater.vala',
    'TestUploadReset.vala',
    'TestUtility.vala',
    'TestXmlParse.vala',
    'ThemeUtils.vala'
])

executable(
    meson.project_name(),
    srcs,
#     dependencies: deps,
    install: false
)